spark 4.0 upgrade