@@ -56,7 +56,7 @@ RUN echo "$LOG_TAG setting python dependencies" && \
     npm install && \
     mvn -e -B package -DskipTests -Pscala-2.12 -Pbuild-distr && \
     cd ${Z_HOME}_src && \
-    export MAVEN_OPTS="-Xmx2048m -XX:MaxPermSize=256m" && \
+    export MAVEN_OPTS="-Xmx2048m" && \
     mvn -e -B package -DskipTests -Pscala-2.12 -Pbuild-distr && \
     tar xvf ${Z_HOME}_src/zeppelin-distribution/target/zeppelin-0.9.0-SNAPSHOT.tar.gz && \
     rm -rf ${Z_HOME}/* && \
